{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 14,
  "lineage": "2adf98fb-7e3f-11cb-a319-6e14d81ab0ae",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0b823aa03ebf22c93",
            "arn": "arn:aws:ec2:ap-south-1:663666505368:instance/i-0fe6d8adf4f6229a7",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fe6d8adf4f6229a7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "linuxkeypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-05536c5f33a463026"
              }
            ],
            "primary_network_interface_id": "eni-05536c5f33a463026",
            "private_dns": "ip-10-0-1-19.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.19",
            "public_dns": "ec2-13-232-29-108.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.232.29.108",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ea42f0c03d26a72b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-082eede8a070e2da0",
            "tags": {
              "Name": "Jenkins-Server"
            },
            "tags_all": {
              "Name": "Jenkins-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0065e8c51c0de55dd"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "663666505368",
            "id": "i-0fe6d8adf4f6229a7",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.jenkins_sg",
            "aws_subnet.trend_subnet",
            "aws_vpc.trend_vpc",
            "data.aws_ami.amazon_linux_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "trend_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:663666505368:internet-gateway/igw-0b9a9667bc520efd7",
            "id": "igw-0b9a9667bc520efd7",
            "owner_id": "663666505368",
            "region": "ap-south-1",
            "tags": {
              "Name": "trend-igw"
            },
            "tags_all": {
              "Name": "trend-igw"
            },
            "vpc_id": "vpc-06c85ef389abf9c5a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.trend_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "trend_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:663666505368:route-table/rtb-004d4c0ae6fb846b8",
            "id": "rtb-004d4c0ae6fb846b8",
            "owner_id": "663666505368",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b9a9667bc520efd7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "trend-public-rt"
            },
            "tags_all": {
              "Name": "trend-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c85ef389abf9c5a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "663666505368",
            "id": "rtb-004d4c0ae6fb846b8",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.trend_igw",
            "aws_vpc.trend_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "trend_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0238bfe9bcfbf1f42",
            "region": "ap-south-1",
            "route_table_id": "rtb-004d4c0ae6fb846b8",
            "subnet_id": "subnet-082eede8a070e2da0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.trend_igw",
            "aws_route_table.trend_rt",
            "aws_subnet.trend_subnet",
            "aws_vpc.trend_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:663666505368:security-group/sg-0065e8c51c0de55dd",
            "description": "Allow SSH and Jenkins",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0065e8c51c0de55dd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "jenkins-sg",
            "name_prefix": "",
            "owner_id": "663666505368",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins-sg"
            },
            "tags_all": {
              "Name": "jenkins-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c85ef389abf9c5a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "663666505368",
            "id": "sg-0065e8c51c0de55dd",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.trend_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "trend_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:663666505368:subnet/subnet-082eede8a070e2da0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082eede8a070e2da0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "663666505368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "trend-public-subnet"
            },
            "tags_all": {
              "Name": "trend-public-subnet"
            },
            "vpc_id": "vpc-06c85ef389abf9c5a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "663666505368",
            "id": "subnet-082eede8a070e2da0",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.trend_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "trend_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:663666505368:vpc/vpc-06c85ef389abf9c5a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-022a790e4fda572de",
            "default_route_table_id": "rtb-0e58488b5f2c54fc0",
            "default_security_group_id": "sg-0407773031ec142aa",
            "dhcp_options_id": "dopt-0ff66adfb4ce1383f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06c85ef389abf9c5a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e58488b5f2c54fc0",
            "owner_id": "663666505368",
            "region": "ap-south-1",
            "tags": {
              "Name": "trend-vpc"
            },
            "tags_all": {
              "Name": "trend-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "663666505368",
            "id": "vpc-06c85ef389abf9c5a",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}